[project]
name = "Monitus-Mentor"
version = "0.1.0"
description = "Monitus-Mentor"
license = { text = "MIT" }
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
langchain = "1.2.6"
openai = "2.11.0"
colorlog = "6.10.1"
pydantic-settings = "2.12.0"
instructor = "1.13.0"
PyGithub = "2.8.1"
nicegui = "3.5.0"
llama-index = "0.14.12"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
black = "25.12.0"
mypy-extensions = "1.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]

[tool.poetry]
package-mode = false
